# cascade

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh.md  example_simple_usage.py  ground_truth.txt  performance.prof  prompt.md  pyproject.toml  test_comprehensive_core.py  test_silero_vad.py  test_stream_real_audio.py  test_vad.py  test_zero_queue_vad.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-wheel.yml  ci.yml
cascade/: __init__.py  api.py  cascade.py
cascade/_internal/: __init__.py  atomic.py  performance.py  thread_pool.py  utils.py
cascade/backends/: __init__.py  base.py  onnx.py  silero-vad使用示例.md  silero.py  thread_pool.py
cascade/buffer/: __init__.py  base.py  frame_aligned_buffer.py  ring_buffer.py
cascade/formats/: __init__.py  base.py  pcma.py  utils.py  wav.py
cascade/processor/: __init__.py  base.py  delay_compensator.py  feature_extractor.py  merger.py  noise_reducer.py  pipeline.py  vad_processor.py
cascade/stream/: __init__.py  collector.py  example.py  instance.py  processor.py  state_machine.py  types.py
cascade/types/: __init__.py  audio.py  config.py  errors.py  generic.py  performance.py  vad.py  version.py
docs/: Silero VAD后端集成项目总结.md  VAD延迟补偿使用示例.md  VAD延迟补偿架构设计.md  VAD延迟补偿简化实现方案.md  VAD时间戳准确性测试设计.md  architecture_refactoring_completion_report.md  architecture_simplification_plan.md  audio_file_processing_implementation_design.md  cascade_api_design.md  cascade_architecture_implementation_plan.md  cascade_stream_processor_design.md  file_vs_stream_processing_comparison.md  frame_aligned_buffer_design.md  how_to_label_ground_truth.md  index.md  mkdocs.yml  multithread_test_report.md  silero-vad使用示例.md  stream_processor_optimization.md  核心类型系统.md
docs/dev/: contributing.md
examples/: README.md  create_test_wav.py  debug_simple_vad.py  parallel_vad_processor_demo.py  quick_vad_demo.py  test_silero_streaming_vad.py  types_usage.py  vad_demo.py
performance_tests/: performance_test_plan.md  performance_test_report.md  run_benchmark.py
scripts/: README.md  run_tests.py
test_results_comprehensive/: test_report_20250827_005520.json  test_report_20250827_005923.json
tests/: README.md  __init__.py  benchmark_performance.py  conftest.py  test_base_processor.py  test_cascade_real_audio.py  test_feature_extractor.py  test_formats.py  test_internal.py  test_noise_reducer.py  test_pipeline.py  test_real_multithread_cascade.py  test_simple_vad.py  test_stream_vad.py  test_types.py  test_vad_processor.py  vad_timestamp_accuracy_test.py
tests/_internal/: __init__.py  test_atomic.py  test_integration.py  test_performance.py  test_thread_pool.py  test_utils.py
tests/type_tests/: test_config.py
tests/types/: __init__.py  test_audio.py  test_config.py  test_errors.py  test_generic.py  test_vad.py
tests/unit/: test_thread_pool.py
tests/unit/backends/: __init__.py  test_base.py
tests/unit/buffer/: __init__.py  test_ring_buffer.py
tests/unit/processor/: __init__.py  test_delay_compensator.py  test_vad_processor.py
web_demo/: README.md  dependencies.txt  server.py  前端界面设计文档.md  实现指南.md  技术设计文档.md  接口设计文档.md
web_demo/backend/: app.py  models.py
web_demo/backend/routes/: upload.py  websocket.py
web_demo/backend/services/: file_service.py  vad_service.py
web_demo/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web_demo/frontend/css/: main.css
web_demo/frontend/js/: audio.js  charts.js  main.js  websocket.js
web_demo/frontend/src/: App.jsx  index.css
web_demo/frontend/src/components/: SpeechSegmentList.jsx  VADConfig.jsx
web_demo/frontend/src/hooks/: useAudioRecorder.js  useWebSocket.js
已完成模块docs/: 已完成模块总结01.md  已完成模块总结02.md  已完成模块总结03.md
架构实现docs/: VAD Backend模块实施计划.md  VAD后端与处理器集成设计.md  VAD处理器流式处理核心逻辑.md  VAD处理器零队列重构完成报告.md  VAD处理器零队列重构方案.md  代码实施计划.md  无队列VAD处理器核心接口实现方案.md  无队列流式并行VAD处理架构设计.md  架构设计.md  核心类型系统设计.md  重构架构设计.md  音频处理器.md  音频处理器架构设计.md  音频处理流程图集.md  音频格式处理.md  音频格式处理兼容性评估.md  音频格式处理模块设计.md  音频缓冲区.md  音频缓冲区模块设计.md  项目结构与开发环境设计.md
